add markdirty and additional dependency to new interface for file buffer -> note that this has now become strongly coupled to the individual repositories -> may be best to have a separate service layer managing this in the future